--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "kasa-app",
+  "name": "demo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "build:server": "tsc --build tsconfig.server.json",
     "build:client": "webpack",
+    "build:sw": "webpack --config sw.webpack.config.js",
     "watch:client": "webpack --watch",
     "watch:server": "tsc --build tsconfig.server.json -w --preserveWatchOutput",
+    "watch:sw": "webpack --config sw.webpack.config.js --watch",
     "nodemon": "nodemon ./out/index.js",
-    "dev": "npm run build:server && npm-run-all --parallel  watch:server watch:client nodemon "
+    "dev": "npm run build:server && npm-run-all --parallel  watch:server watch:client watch:sw nodemon "
   },
   "keywords": [],
   "author": "",
@@ -23,14 +25,17 @@
     "@types/express": "^4.17.13",
     "@types/node": "16.11.10",
     "css-loader": "^6.5.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "node-sass": "^7.0.0",
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
+    "preact-svg-loader": "^0.2.1",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.6",
     "typescript": "4.5.2",
+    "url-loader": "^4.1.1",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
     "webpackbar": "^5.0.2"
