--- a/tsconfig.sw.json
+++ b/tsconfig.sw.json
@@ -2,13 +2,13 @@
   "compilerOptions": {
     /* Language and Environment */
     "target": "ES2020",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
-    "lib": ["ES2020", "DOM"],                                        /* Specify a set of bundled library declaration files that describe the target runtime environment. */
-     "jsx": "react-jsx",                                /* Specify what JSX code is generated. */
+    "lib": ["ES2020", "WebWorker"],                                        /* Specify a set of bundled library declaration files that describe the target runtime environment. */
+    //  "jsx": "react-jsx",                                /* Specify what JSX code is generated. */
      "experimentalDecorators": true,                   /* Enable experimental support for TC39 stage 2 draft decorators. */
      "emitDecoratorMetadata": true,                    /* Emit design-type metadata for decorated declarations in source files. */
     // "jsxFactory": "",                                 /* Specify the JSX factory function used when targeting React JSX emit, e.g. 'React.createElement' or 'h' */
     // "jsxFragmentFactory": "",                         /* Specify the JSX Fragment reference used for fragments when targeting React JSX emit e.g. 'React.Fragment' or 'Fragment'. */
-    "jsxImportSource": "preact",                            /* Specify module specifier used to import the JSX factory functions when using `jsx: react-jsx*`.` */
+    // "jsxImportSource": "preact",                            /* Specify module specifier used to import the JSX factory functions when using `jsx: react-jsx*`.` */
     // "reactNamespace": "",                             /* Specify the object invoked for `createElement`. This only applies when targeting `react` JSX emit. */
     // "noLib": true,                                    /* Disable including any library files, including the default lib.d.ts. */
     // "useDefineForClassFields": true,                  /* Emit ECMAScript-standard-compliant class fields. */
@@ -89,10 +89,9 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   "include": [
-    "src/client/"
+    "src/client/sw.ts"
   ],
   "exclude": [
-    "node_modules",
-    "src/client/sw.ts"
+    "node_modules"
   ]
 }
