--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "css-loader": "^6.5.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
-    "node-sass": "^7.0.0",
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
     "preact-svg-loader": "^0.2.1",
+    "sass": "^1.47.0",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.6",
